2004-02-28  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm :
	(kahua-persistent-classes-in-db):
	(kahua-persistent-class-generation):
	(kahua-persistent-class-definition): added metalevel API.

2004-02-27  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm (kahua-object reader): check if the
	generation of instance is newer than currently recorded in-db class
	generation, and if so, re-read metainfo.
	(compute-translation-directive): fixed a bug that the translation
	directive might have been assigned incorrectly.

	* src/kahua/persistence.scm:
	(<kahua-db-dbi> etc): added support of DBI back-end.  Tested with
	mysql.  The back-end database can be specified by "mysql:" or
	"pg:" prefix in the database pathname.  If these paths
	are specified, dbi module is autoloaded, so the caller doesn't
	need to load dbi explicitly.  (And kahua.persistence still works
	without dbi, as far as such pathnames aren't specified).
	The current implementation is a prototype, inefficient and
	not robust.
	* test/persistence.scm : changed a bit so that it can test both
	standard filesystem db and DBI-backed db.
	* test/persistence-dbi.scm : added.  This isn't run by make check,
	for it requires setup on RDBMS side.

2004-02-27  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/sandbox.scm: requires gauche.redefutil module before
	class redefinition.

2004-02-27  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua-spvr.in : fixed bug fixed about ping(error handling).

2004-02-26  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm : implemented schema generation control;
	the module compares it's in-memory persistent class generation and
	in-db persistent class generation, and upgrades/downgrades the
	instance automatically when reading the data into memory.  At the
	commitment time, the in-db persistent instance is upgraded iff
	in-memory generation is newer than in-db generation.
	* test/persistence.scm : added tests for the above change.