@@ -4,6 +4,8 @@
 	(kahua-persistent-classes-in-db):
 	(kahua-persistent-class-generation):
 	(kahua-persistent-class-definition): added metalevel API.
+	(translate-up, translate-down): fixed a bug that caused an error
+	when upgrading databases created by older kahua.persistence.
 
 2004-02-27  Shiro Kawai  <shiro@acm.org>
 
